[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD and Menus/Scripts/itemBar.gd" type="Script" id=1]
[ext_resource path="res://HUD and Menus/item_bar/itemBar0.png" type="Texture" id=2]

[node name="itemBar" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.57497
margin_bottom = 3.57497
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -52.0
margin_top = -40.0
margin_right = 52.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftIcon" type="TextureRect" parent="bar"]
margin_left = 8.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="midIcon" type="TextureRect" parent="bar"]
anchor_left = 0.347
anchor_right = 0.347
margin_left = 6.0
margin_top = 8.0
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightIcon" type="TextureRect" parent="bar"]
anchor_left = 0.646
anchor_right = 0.646
margin_left = 9.0
margin_top = 8.0
margin_right = 33.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -24.0
margin_right = 58.0
margin_bottom = -6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passive1" type="TextureRect" parent="HBoxContainer"]
margin_bottom = 18.0
stretch_mode = 3

[node name="passive2" type="TextureRect" parent="HBoxContainer"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 18.0
stretch_mode = 3

[node name="passive3" type="TextureRect" parent="HBoxContainer"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 18.0
stretch_mode = 3
